# scitex-gen

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.github/workflows/: cla.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-gen-quality-audit-on-ubuntu-latest.yml  test.yml
.scitex/dev/: config.yaml
.venv-test/: pyvenv.cfg
docs/adr/: 0001-dissolve-scitex-gen-into-specific-packages.md
docs/sphinx/: api.rst  conf.py  index.rst
examples/: quickstart.py
src/scitex_gen/: README.md  _TimeStamper.py  __init__.py  _less.py  _list_packages.py  _mat2py.py  _norm.py  _norm_cache.py  _paste.py  _print_config.py  _shell.py  _src.py  _title2path.py  _title_case.py  _to_even.py  _transpose.py  _type.py  _var_info.py  misc.py
src/scitex_gen/_fs/: __init__.py  _symlink.py
src/scitex_gen/_introspect/: _DimHandler.py  __init__.py
src/scitex_gen/_ipython/: __init__.py
src/scitex_gen/_legacy/: __init__.py  _deprecated_close.py  _deprecated_start.py
src/scitex_gen/_numeric/: __init__.py  _norm.py  _norm_cache.py  _to_rank.py
src/scitex_gen/_skills/scitex-gen/: 01_installation.md  02_quick-start.md  03_python-api.md  SKILL.md
src/scitex_gen/_sphinx_html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/scitex_gen/_sphinx_html/.doctrees/: api.doctree  index.doctree
src/scitex_gen/_sphinx_html/.doctrees/api/: scitex_gen.doctree  scitex_gen.misc.doctree  scitex_gen.path.doctree
src/scitex_gen/_sphinx_html/_modules/: functools.html  index.html
src/scitex_gen/_sphinx_html/_modules/scitex_context/: _detect_environment.html  _get_notebook_path.html
src/scitex_gen/_sphinx_html/_modules/scitex_gen/: _DimHandler.html  _TimeStamper.html  _alternate_kwarg.html  _deprecated_close.html  _deprecated_start.html  _embed.html  _is_ipython.html  _less.html  _list_packages.html  _mat2py.html  _norm.html  _paste.html  _print_config.html  _src.html  _symlink.html  _symlog.html  _title2path.html  _to_even.html  _to_odd.html  _to_rank.html  _transpose.html  _var_info.html  _wrap.html  _xml2dict.html  misc.html
src/scitex_gen/_sphinx_html/_modules/scitex_gen/_fs/: _print_config.html  _src.html  _symlink.html  _title2path.html
src/scitex_gen/_sphinx_html/_modules/scitex_gen/_introspect/: _DimHandler.html  _alternate_kwarg.html  _list_packages.html  _mat2py.html  _xml2dict.html
src/scitex_gen/_sphinx_html/_modules/scitex_gen/_ipython/: _embed.html  _is_ipython.html  _less.html  _paste.html
src/scitex_gen/_sphinx_html/_modules/scitex_gen/_legacy/: _TimeStamper.html  _deprecated_close.html  _deprecated_start.html
src/scitex_gen/_sphinx_html/_modules/scitex_gen/_numeric/: _norm.html  _symlog.html  _to_even.html  _to_odd.html  _to_rank.html  _transpose.html
src/scitex_gen/_sphinx_html/_modules/scitex_introspect/: _list_api.html
src/scitex_gen/_sphinx_html/_modules/scitex_os/: _check_host.html
src/scitex_gen/_sphinx_html/_modules/scitex_sh/: _shell_legacy.html
src/scitex_gen/_sphinx_html/_modules/scitex_stats/descriptive/: _ci.html
src/scitex_gen/_sphinx_html/_modules/scitex_str/: _title_case.html
src/scitex_gen/_sphinx_html/_modules/scitex_str/_case/: _title_case.html
src/scitex_gen/_sphinx_html/_sources/: api.rst.txt  index.rst.txt
src/scitex_gen/_sphinx_html/_sources/api/: scitex_gen.misc.rst.txt  scitex_gen.path.rst.txt  scitex_gen.rst.txt
src/scitex_gen/_sphinx_html/api/: scitex_gen.html  scitex_gen.misc.html  scitex_gen.path.html
tests/: conftest.py  test__DimHandler.py  test__TimeStamper.py  test__alternate_kwarg.py  test__cache.py  test__check_host.py  test__ci.py  test__deprecated_close.py  test__deprecated_start.py  test__embed.py  test__inspect_module.py  test__less.py  test__list_packages.py  test__norm.py  test__norm_cache.py  test__paste.py  test__print_config.py  test__shell.py  test__symlink.py  test__title2path.py  test__title_case.py  test__to_even.py  test__transpose.py  test__type.py  test_misc.py  test_path.py
tests/develop/: test_audit.py
tests/examples/: test_quickstart.py
tests/integration/: test_cross_package_imports.py
tests/scitex_gen/: test__DimHandler.py  test__TimeStamper.py  test__alternate_kwarg.py  test__cache.py  test__deprecated_close.py  test__deprecated_start.py  test__detect_notebook_path.py  test__embed.py  test__is_ipython.py  test__less.py  test__list_packages.py  test__mat2py.py  test__norm.py  test__norm_cache.py  test__paste.py  test__print_config.py  test__src.py  test__symlink.py  test__symlog.py  test__title2path.py  test__to_even.py  test__to_odd.py  test__to_rank.py  test__transpose.py  test__type.py  test__var_info.py  test__wrap.py  test__xml2dict.py  test_misc.py  test_path.py  test_torch_optional.py
tests/scitex_gen/_fs/: test__print_config.py  test__src.py  test__symlink.py
tests/scitex_gen/_introspect/: test__DimHandler.py  test__cache.py  test__list_packages.py  test__mat2py.py  test__xml2dict.py
tests/scitex_gen/_ipython/: test__detect_notebook_path.py  test__embed.py  test__is_ipython.py  test__less.py
tests/scitex_gen/_legacy/: test__TimeStamper.py  test__deprecated_start.py
tests/scitex_gen/_numeric/: test__symlog.py
