[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scitex-gen"
version = "0.1.12"
description = "General utilities (caching, env detection, normalization, mat→npy, xml→dict, TimeStamper, …) — standalone module from the SciTeX ecosystem"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
authors = [{name = "Yusuke Watanabe", email = "noreply@scitex.ai"}]
keywords = ["scitex", "general", "utilities"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "h5py",
    "matplotlib",
    "readchar",
    # torch is INTENTIONALLY OMITTED from core deps. The bare
    # `pip install scitex-gen` install must NOT pull torch +
    # nvidia-cuda + cublas + cuda-toolkit + triton + sympy + networkx
    # (~4GB) just because a small slice of scitex_gen's surface uses
    # torch.Tensor. Modules that genuinely require torch (_type,
    # _var_info, _numeric._norm) make the import optional; functions
    # that need torch raise a clear ImportError telling the user to
    # install with `scitex-gen[torch]`. See proj-paper-ripple-wm's
    # 4.4GB SIF dogfood signal (2026-06-07) for the motivation.
    "scitex-context>=0.1.0",
    "scitex-decorators>=0.1.1",
    "scitex-dev>=0.11.7",
    "scitex-dict>=0.1.0",
    "scitex-introspect>=0.1.1",
    "scitex-os>=0.1.0",
    "scitex-session>=0.1.0",
    "scitex-sh>=0.1.0",
    "scitex-stats>=0.1.0",
    "scitex-str>=0.1.2",
]

[project.optional-dependencies]
torch = [
    "torch",
    "xarray",
]
# `[all]` aggregates every optional dep so a user opting in to "every
# feature" lands at the maximum-functionality install. After torch was
# moved OUT of core deps (the 4GB SIF win), `[all]` is the canonical
# home for it — leaving it ONLY under `[torch]` would silently break
# `pip install scitex-gen[all]` for any user who installed via that
# path and then called torch-using numerics. Per the ecosystem
# dependency-tiers rule (scitex-dev skill 05_development/11): default
# install minimal, `[all]` = every optional dep, `[dev]` = `[all]` +
# test tooling.
all = [
    "torch",
    "xarray",
]
dev = [
    # [dev] includes [all] so CI's ``pip install -e .[dev]`` always
    # gets torch (and every other optional dep) transitively. Avoids
    # the silent-drop trap that triggered PR #21's 80-min CI hang: the
    # workflow runs ``pip install -e ".[all,dev]" || pip install -e
    # ".[dev]" || pip install -e .``. Without ``[all]`` aggregating
    # torch, the ``.[dev]`` fallback would lack torch and existing
    # tests hang on torch operations.
    "scitex-gen[all]",
    "joblib",
    "pytest",
    "pytest-cov",
    "ruff",
    "scitex-dev>=0.11.7",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "scitex-gen[torch]",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-gen"
Repository = "https://github.com/ywatanabe1989/scitex-gen"
Documentation = "https://scitex-gen.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scitex_gen = ["_skills/**/*.md"]

[project.entry-points."scitex_dev.skills"]
scitex-gen = "scitex_gen"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--disable-warnings"]

[tool.coverage.run]
parallel = true
source = ["scitex_gen"]
concurrency = ["multiprocessing", "thread"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "examples", "apps", "config", "docs"]
