[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scitex-gen"
version = "0.1.12"
description = "General utilities (caching, env detection, normalization, mat→npy, xml→dict, TimeStamper, …) — standalone module from the SciTeX ecosystem"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
authors = [{name = "Yusuke Watanabe", email = "noreply@scitex.ai"}]
keywords = ["scitex", "general", "utilities"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "h5py",
    "matplotlib",
    "readchar",
    # torch is INTENTIONALLY OMITTED from core deps. The bare
    # `pip install scitex-gen` install must NOT pull torch +
    # nvidia-cuda + cublas + cuda-toolkit + triton + sympy + networkx
    # (~4GB) just because a small slice of scitex_gen's surface uses
    # torch.Tensor. Modules that genuinely require torch (_type,
    # _var_info, _numeric._norm) make the import optional; functions
    # that need torch raise a clear ImportError telling the user to
    # install with `scitex-gen[torch]`. See proj-paper-ripple-wm's
    # 4.4GB SIF dogfood signal (2026-06-07) for the motivation.
    "scitex-context>=0.1.0",
    "scitex-decorators>=0.1.1",
    "scitex-dev>=0.11.7",
    "scitex-dict>=0.1.0",
    "scitex-introspect>=0.1.1",
    "scitex-os>=0.1.0",
    "scitex-session>=0.1.0",
    "scitex-sh>=0.1.0",
    "scitex-stats>=0.1.0",
    "scitex-str>=0.1.2",
]

[project.optional-dependencies]
torch = [
    "torch",
    "xarray",
]
dev = [
    "joblib",
    "xarray",
    "pytest",
    "pytest-cov",
    "ruff",
    "scitex-dev>=0.11.7",
    # torch is OPTIONAL for end-users (lives in [torch] / [all]
    # extras so bare ``pip install scitex-gen`` stays ~500MB instead
    # of ~4GB). But the test suite calls torch-using functions
    # directly, so list torch DIRECTLY in [dev] — the [all]
    # self-reference doesn't work for editable installs (pip cannot
    # resolve the package's own name during ``pip install -e .[dev]``
    # because the package isn't on PyPI yet at install time), so we
    # repeat the dep literally here. The dependency-tiers principle
    # is preserved: default = minimal, [all] = every optional dep
    # including torch, [dev] = explicit list of every test/runtime
    # dep that the suite needs.
    "torch",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
# `[all]` aggregates every optional dep so a user opting in to "every
# feature" lands at the maximum-functionality install. Lists deps
# directly (not via the `scitex-gen[torch]` self-reference which
# fails to resolve during editable installs because the package isn't
# on PyPI yet at install time). Mirrors the contents of `[torch]`.
all = [
    "torch",
    "xarray",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-gen"
Repository = "https://github.com/ywatanabe1989/scitex-gen"
Documentation = "https://scitex-gen.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scitex_gen = ["_skills/**/*.md"]

[project.entry-points."scitex_dev.skills"]
scitex-gen = "scitex_gen"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--disable-warnings"]
# Dump every thread's stack if a test runs longer than 120s. Pytest
# never finishes silently — if something deadlocks (waiting on torch
# init, matplotlib backend probe, subprocess coverage handshake,
# audit-all subprocess walk), faulthandler names the exact test +
# line in the CI log instead of leaving us reading the runner clock.
# Cost: zero on green runs; ground-truth diagnostic on hangs.
faulthandler_timeout = 120

[tool.coverage.run]
parallel = true
source = ["scitex_gen"]
concurrency = ["multiprocessing", "thread"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "examples", "apps", "config", "docs"]
