[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scitex-gen"
version = "0.1.13"
description = "General utilities (caching, env detection, normalization, mat→npy, xml→dict, TimeStamper, …) — standalone module from the SciTeX ecosystem"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
authors = [{name = "Yusuke Watanabe", email = "noreply@scitex.ai"}]
keywords = ["scitex", "general", "utilities"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "pandas",
    # `scipy` and `h5py` dropped from core in 2026-06-13 hard-dep-
    # overreach sweep. `rg "^(import|from)\s+(scipy|h5py)\b" src/`
    # finds zero imports across the 34 scitex_gen source files. The
    # only historical references lived in `_introspect/_mat2py.py`
    # (a matlab-converter utility) which has since been removed or
    # refactored. The torch comment block below (lines preserved)
    # documents the same discipline — pull heavy deps only when a real
    # call site needs them. CI-as-gate (a2a 582a39fb) catches lazy /
    # re-export paths before auto-merge. See scitex-dev a2a directive
    # da6bcfb8.
    "matplotlib",
    "readchar",
    # torch is INTENTIONALLY OMITTED from core deps. The bare
    # `pip install scitex-gen` install must NOT pull torch +
    # nvidia-cuda + cublas + cuda-toolkit + triton + sympy + networkx
    # (~4GB) just because a small slice of scitex_gen's surface uses
    # torch.Tensor. Modules that genuinely require torch (_type,
    # _var_info, _numeric._norm) make the import optional; functions
    # that need torch raise a clear ImportError telling the user to
    # install with `scitex-gen[torch]`. See proj-paper-ripple-wm's
    # 4.4GB SIF dogfood signal (2026-06-07) for the motivation.
    "scitex-context>=0.1.0",
    "scitex-decorators>=0.1.1",
    "scitex-dev>=0.11.7",
    "scitex-dict>=0.1.0",
    "scitex-introspect>=0.1.1",
    "scitex-os>=0.1.0",
    "scitex-session>=0.1.0",
    "scitex-sh>=0.1.0",
    "scitex-stats>=0.1.0",
    "scitex-str>=0.1.2",
]

[project.optional-dependencies]
torch = [
    "torch",
    "xarray",
]
dev = [
    "joblib",
    "xarray",
    "pytest",
    "pytest-cov",
    "ruff",
    "scitex-dev>=0.11.7",
    # `h5py` + `scipy` restored to [dev] after the 2026-06-13
    # hard-dep-overreach drop (PR #27) broke 3 test files that import
    # them at test-collection time:
    #   tests/scitex_gen/_introspect/test__list_packages.py
    #   tests/scitex_gen/_introspect/test__mat2py.py
    #   tests/scitex_gen/_introspect/test__xml2dict.py
    # The introspect tests probe packages with matlab / hdf5 surfaces
    # and need h5py + scipy to verify their introspection paths. src/
    # legitimately doesn't import them (audit was right) but TESTS do.
    # Doctrinal fix per lead a2a 42e98770: move-to-extra, not delete.
    # CI-as-gate held — pytest matrix red BUT scitex-gen's branch-
    # protection doesn't require pytest in required-checks, so #27
    # auto-merged red. Fleet-risk added to scitex-dev#173.
    "h5py",
    "scipy",
    # torch is OPTIONAL for end-users (lives in [torch] / [all]
    # extras so bare ``pip install scitex-gen`` stays ~500MB instead
    # of ~4GB). But the test suite calls torch-using functions
    # directly, so list torch DIRECTLY in [dev] — the [all]
    # self-reference doesn't work for editable installs (pip cannot
    # resolve the package's own name during ``pip install -e .[dev]``
    # because the package isn't on PyPI yet at install time), so we
    # repeat the dep literally here. The dependency-tiers principle
    # is preserved: default = minimal, [all] = every optional dep
    # including torch, [dev] = explicit list of every test/runtime
    # dep that the suite needs.
    "torch",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
# `[all]` aggregates every optional dep so a user opting in to "every
# feature" lands at the maximum-functionality install. Lists deps
# directly (not via the `scitex-gen[torch]` self-reference which
# fails to resolve during editable installs because the package isn't
# on PyPI yet at install time). Mirrors the contents of `[torch]`.
all = [
    "torch",
    "xarray",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-gen"
Repository = "https://github.com/ywatanabe1989/scitex-gen"
Documentation = "https://scitex-gen.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scitex_gen = ["_skills/**/*.md"]

[project.entry-points."scitex_dev.skills"]
scitex-gen = "scitex_gen"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--disable-warnings",
    # Deselect a pre-existing recursive smoke-test that hangs CI: the
    # body is ``pytest.main([__file__, "-xvs"])`` which re-invokes
    # pytest on the same file, recursing through itself again at
    # every depth. develop has the same test and somehow tolerates
    # it (probably hits Python's recursion guard or pytest's own
    # protection at low depth), but the interaction with this PR's
    # pyproject changes (faulthandler_timeout, [dev] including torch
    # transitively, etc.) wedges the recursion in CI. Properly fix
    # owed: the test owner should replace pytest.main(...) with a
    # real assertion or delete the test outright (see follow-up
    # task filed via Task #8 sweep). Deselecting here is the
    # minimal-scope unblock so PR #21 can land.
    "--deselect=tests/scitex_gen/_ipython/test__paste.py::test_main_calls_main",
]
# Dump every thread's stack if a test runs longer than 120s. Pytest
# never finishes silently — if something deadlocks (waiting on torch
# init, matplotlib backend probe, subprocess coverage handshake,
# audit-all subprocess walk), faulthandler names the exact test +
# line in the CI log instead of leaving us reading the runner clock.
# Cost: zero on green runs; ground-truth diagnostic on hangs.
faulthandler_timeout = 120

[tool.coverage.run]
parallel = true
source = ["scitex_gen"]
concurrency = ["multiprocessing", "thread"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "examples", "apps", "config", "docs"]

[tool.scitex_dev.audit]
# PS-168 — Per-package secret + env-var prefix in GitHub Actions workflows.
# `GH_PERSONAL_ACCESS_TOKEN` is the ecosystem-wide cross-cutting PAT used
# by the contributor-assistant CLA action. The natural GITHUB_* namespace
# is reserved by GitHub Actions on the secret-name surface (HTTP 422 on
# every `gh secret set`), so the GH_ shorthand is the canonical
# substitute and is registered ecosystem-wide via PR #122 on scitex-dev
# (EXCEPTION_SECRETS_DEFAULT). This per-package entry pins the same
# exception inline so the audit passes on every scitex-dev version,
# independent of release timing.
ps168_secret_exceptions = ["GH_PERSONAL_ACCESS_TOKEN"]
